Fix scrollbar in forms

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -101,7 +101,6 @@
                 display: flex;
                 flex-flow: column;
                 flex: 1 1 1000px;
-                overflow: auto;
 
                 .cp-form-creator-add-inline {
                     display: flex;
